# smileCpp

./: .gitignore  .layers.cc.swp  .layers.cpp.swp  .read.cpp.swp  .test.cc.swp  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.txt  bin  build.sh  face.cc  face.h  faceTest  faceTest.cc  faceTest.sh  layers.cc  layers.cpp  layers.h  makeup.cc  makeup.cpp  makeup.h  mask.cc  mask.cc~  maskTest.sh  read.cpp  read.cpp~  test.cc
ThinPlateSpline/: ReadMe.txt  ThinPlateSpline.vcxproj
images/: CMakeLists.txt  example.txt  example.txt~  obama.txt
images/landmarks/: A*.txt  A.txt  B.txt  example3.txt  example4.txt
include/: differenceMakeup.h  exampleMakeup.h  foundation.h  makeup.h  softLightBlend.h
include/ThinPlateSpline/: CThinPlateSpline.h
src/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake  differenceMakeup.cc  differenceMakeup.h  exampleMakeup.cc  exampleMakeup.h  face.cc  face.h  foundation.cc  layers.cc  makeup.cc  makeup.cc~  makeup.h  makeup.h~  mask.cc  overlay_points.h  softLightBlend.cc
src/ThinPlateSpline/: .CThinPlateSpline.cpp.swp  .CThinPlateSpline.h.swp  CThinPlateSpline.cpp  CThinPlateSpline.h  ThinPlateSpline.cpp  ThinPlateSpline.vcxproj.filters  stdafx.cpp
src/dlib/image_processing/: render_face_detections.h~
tests/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  differenceMakeupTest.cc  faceTest.cc  face_landmark_detection_ex.cc  foundationTest.cc  makeupTest.cc  mask.cc  softLightBlendTest.cc  test.cc  train_shape_predictor_ex.cc
tests/faces/: CMakeLists.txt  CMakeLists.txt~  testing_with_face_landmarks.xml  training.xml  training_with_face_landmarks.xml  training_with_face_landmarks.xml~
tests/images/landmarks/: example2.txt
